<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Curevive Patient</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_otp_will_be_sent">OTP will be sent to this mobile number to verify</string>
    <string name="msg_privacy_policies">Privacy Policies</string>
    <string name="lbl_91">+91</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="msg_985859_please">985859**** , Please enter the code sent.</string>
    <string name="msg_otp_has_be_sent2">OTP has be sent to </string>
    <string name="msg_login_with_google">Login with google</string>
    <string name="lbl_or">OR</string>
    <string name="msg_by_continuing_you">By Continuing, you agree to Curevive\u2019s Terms &amp; Conditionsand Privacy Policies</string>
    <string name="msg_by_continuing_you2">By Continuing, you agree to Curevive\u2019s </string>
    <string name="msg_don_t_have_account">Don\u2019t have account ?</string>
    <string name="msg_start_your_curevive">Start Your Curevive Journney Now!</string>
    <string name="lbl_and">and </string>
    <string name="msg_didn_t_receive_otp">Didn\u2019t Receive OTP?</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_submit">Submit</string>
    <string name="msg_terms_conditions">Terms &amp; Conditions</string>
    <string name="msg_otp_has_be_sent">OTP has be sent to 985859**** , Please enter the code sent.</string>
    <string name="msg_enter_your_number">Enter Your Number</string>
    <string name="lbl_enter_otp">Enter Otp</string>
    <string name="title_activity_register_otpverify">RegisterOTPVerify</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lbl_1_3">1/3</string>
    <string name="msg_how_to_contact_you">Where Do You Stay?</string>
    <string name="lbl_upload_profile">Upload Profile</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_988080_8">9900990099</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_yourgmail_com">ameer@gmail.com</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_2_3">2/3</string>
    <string name="lbl_about_you">About You?</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_00">00</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_profession">Profession</string>
    <string name="lbl_3_3">3/3</string>
    <string name="msg_where_do_you_stay">Where Do You Stay?</string>
    <string name="lbl_complete">Completed</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="lbl_00000">587116</string>
    <string name="lbl_home">Community</string>
    <string name="lbl_search">Store</string>
    <string name="lbl_overview">Connect</string>
    <string name="lbl_activity">Knowledge</string>
    <string name="lbl_search1">Home</string>

    <string name="msg_view_progress">View Progress &gt;&gt;</string>
    <string name="lbl_ask_here">Ask Here...</string>
    <string name="lbl_schedule">Schedule</string>
    <string name="msg_good_afternoon">Good Afternoon, Archana!</string>
    <string name="lbl_buy">Buy</string>
    <string name="msg_true_medicine_comes">True medicine comes from
the earth, bot from lab.</string>
    <string name="lbl_3">3</string>
    <string name="lbl_join">Join</string>
    <string name="msg_today_activities">Today Activities</string>
    <string name="lbl_aroma_therapy">Aroma Therapy</string>
    <string name="lbl_18_26_feb">18 - 26 FEB</string>
    <string name="lbl_workshops">Workshops</string>
    <string name="lbl_view_all">View All</string>
    <string name="lbl_ongoing">Ongoing</string>
    <string name="lbl_webinar">Webinar</string>
    <string name="msg_10_12_activities">10/12 activities completed </string>
    <string name="msg_step_towards_flexible">Step towards flexible you</string>
    <string name="msg_beginners_yoga_program">Beginners Yoga Program</string>
    <string name="msg_26_december_2022">26 December,2022</string>
    <string name="msg_got_a_question_in">Got a question in mind ?</string>
    <string name="lbl_blogs">Blogs</string>
    <string name="lbl_8_days_workshop">8 days workshop</string>
    <string name="lbl_meditation">Meditation</string>
    <string name="lbl_yoga">Yoga</string>
    <string name="msg_5_asanas_to_build">5 Asanas to build a strong body.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_articles">Blogs</string>
    <string name="lbl_training_videos">QA\'s</string>
    <string name="lbl_testimonals">Recipies</string>
    <string name="treatments">Treatments</string>
    <string name="addons">Add-ons</string>
    <string name="journywithus">JourneyWithUs</string>
    <string name="researches">Researchs</string>
</resources>
